--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@ function setupPWAInstall() {
 function createWebAppManifest() {
   const manifest = {
     "name": "Udayana Portal",
-    "short_name": "Udayana",
+    "short_name": "SUKASADA05",
     "description": "Portal Akses Cepat Kodam Udayana",
     "start_url": ".",
     "display": "standalone",
